--- a/src/index.html
+++ b/src/index.html
@@ -11,25 +11,20 @@
     <link rel="stylesheet" href="https://use.typekit.net/mzr6zme.css">
     <link rel="stylesheet" type="text/css" href="./css/base.css">
     <script>document.documentElement.className = "js"; var supportsCssVars = function() { var e, t = document.createElement("style"); return t.innerHTML = "root: { --tmp-var: bold; }", document.head.appendChild(t), e = !!(window.CSS && window.CSS.supports && window.CSS.supports("font-weight", "var(--tmp-var)")), t.parentNode.removeChild(t), e }; supportsCssVars() || alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
-    <script src="//tympanus.net/codrops/adpacks/analytics.js"></script>
   </head>
 
   <body class="demo-1">
     <main>
       <div class="frame">
         <div class="frame__title-wrap">
-          <h1 class="frame__title">Magical Marbles in Three.js</h1>
+          <h1 class="frame__title"></h1>
         </div>
         <nav class="frame__links">
-          <a href="http://tympanus.net/Development/SuperfluidLayout/">Previous demo</a>
-          <a href="https://tympanus.net/codrops/?p=55713">Article</a>
-          <a href="https://github.com/mattrossman/magic-marble-tutorial/">GitHub</a>
         </nav>
       </div>
       <div class="content" id="root">
         <script type="module" src="./index.jsx"></script>
       </div>
     </main>
-    <script src="https://tympanus.net/codrops/adpacks/cda.js"></script>
   </body>
 </html>
